--- a/app/docs/components/ExperienceComponent.html
+++ b/app/docs/components/ExperienceComponent.html
@@ -108,9 +108,6 @@
                                     <a href="../components/ContactFormComponent.html" >ContactFormComponent</a>
                                 </li>
                                 <li class="link">
-                                    <a href="../components/ContactMapComponent.html" >ContactMapComponent</a>
-                                </li>
-                                <li class="link">
                                     <a href="../components/EducationComponent.html" >EducationComponent</a>
                                 </li>
                                 <li class="link">
@@ -124,6 +121,12 @@
                                 </li>
                                 <li class="link">
                                     <a href="../components/SkillsComponent.html" >SkillsComponent</a>
+                                </li>
+                                <li class="link">
+                                    <a href="../components/TravelComponent.html" >TravelComponent</a>
+                                </li>
+                                <li class="link">
+                                    <a href="../components/TravelMapComponent.html" >TravelMapComponent</a>
                                 </li>
                         </ul>
                     </li>
@@ -423,9 +426,6 @@
                                            <a href="../components/ContactFormComponent.html" >ContactFormComponent</a>
                                        </li>
                                        <li class="link">
-                                           <a href="../components/ContactMapComponent.html" >ContactMapComponent</a>
-                                       </li>
-                                       <li class="link">
                                            <a href="../components/EducationComponent.html" >EducationComponent</a>
                                        </li>
                                        <li class="link">
@@ -439,6 +439,12 @@
                                        </li>
                                        <li class="link">
                                            <a href="../components/SkillsComponent.html" >SkillsComponent</a>
+                                       </li>
+                                       <li class="link">
+                                           <a href="../components/TravelComponent.html" >TravelComponent</a>
+                                       </li>
+                                       <li class="link">
+                                           <a href="../components/TravelMapComponent.html" >TravelMapComponent</a>
                                        </li>
                                </ul>
                            </li>
@@ -993,7 +999,7 @@ export class ExperienceComponent implements OnInit {
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
         var COMPONENT_TEMPLATE = '<div><!--experience start--><section class="experience" id="experience">  <div class="container">    <div class="heading">      <h2>Work Experience</h2>      <p>what I\'ve done so far</p>    </div>    <div *ngFor="let job of jobs" class="row work-details">      <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">        <div class="work-year">{{job.year.from}} <i class="icon-angle-circled-right"></i><br>{{job.year.to}}</div>      </div>      <div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 right-area">        <div class="arrow-part"></div>        <div class="experience-container">          <h4>{{job.institution.name}}&nbsp;            <a *ngIf="job.institution.url"               href="{{job.institution.url}}"               target="_blank"               rel="noopener noreferrer"               class="link js_track_link_click"               attr.aria-label="{{job.institution.name}}">              <i class="icon-link-ext"></i>            </a>          </h4>          <h5>{{job.title}}</h5>          <h5 class="sub-heading"><i>{{job.institution.location}}</i></h5>          <section [innerHtml]="job.content" class="content"></section>          <h6 *ngIf="job.accomplishments">Accomplishments</h6>          <section *ngIf="job.accomplishments" [innerHtml]="job.accomplishments" class="content"></section>          <div *ngIf="job.video" class="vid-container">            <iframe title="{{job.video.videoTitle}}" class="youtube-frame" width="1280" height="720" [src]="job.video.videoUrl | videoUrl" frameborder="0" allowfullscreen></iframe>          </div>        </div>      </div>    </div>  </div></section><!--experience end--></div>'
-    var COMPONENTS = [{'name': 'AboutComponent', 'selector': 'about'},{'name': 'AppComponent', 'selector': 'container'},{'name': 'ContactComponent', 'selector': 'contact'},{'name': 'ContactFormComponent', 'selector': 'contact-form'},{'name': 'ContactMapComponent', 'selector': 'googlemap'},{'name': 'EducationComponent', 'selector': 'education'},{'name': 'ExperienceComponent', 'selector': 'experience'},{'name': 'FooterComponent', 'selector': 'footer'},{'name': 'HeaderComponent', 'selector': 'header'},{'name': 'SkillsComponent', 'selector': 'skills'}];
+    var COMPONENTS = [{'name': 'AboutComponent', 'selector': 'about'},{'name': 'AppComponent', 'selector': 'container'},{'name': 'ContactComponent', 'selector': 'contact'},{'name': 'ContactFormComponent', 'selector': 'contact-form'},{'name': 'EducationComponent', 'selector': 'education'},{'name': 'ExperienceComponent', 'selector': 'experience'},{'name': 'FooterComponent', 'selector': 'footer'},{'name': 'HeaderComponent', 'selector': 'header'},{'name': 'SkillsComponent', 'selector': 'skills'},{'name': 'TravelComponent', 'selector': 'travel'},{'name': 'TravelMapComponent', 'selector': 'googlemap'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'ExperienceComponent'};
 </script>
