--- a/app/docs/components/TravelMapComponent.html
+++ b/app/docs/components/TravelMapComponent.html
@@ -108,9 +108,6 @@
                                     <a href="../components/ContactFormComponent.html" >ContactFormComponent</a>
                                 </li>
                                 <li class="link">
-                                    <a href="../components/ContactMapComponent.html"  data-type="entity-link" class="active" >ContactMapComponent</a>
-                                </li>
-                                <li class="link">
                                     <a href="../components/EducationComponent.html" >EducationComponent</a>
                                 </li>
                                 <li class="link">
@@ -124,6 +121,12 @@
                                 </li>
                                 <li class="link">
                                     <a href="../components/SkillsComponent.html" >SkillsComponent</a>
+                                </li>
+                                <li class="link">
+                                    <a href="../components/TravelComponent.html" >TravelComponent</a>
+                                </li>
+                                <li class="link">
+                                    <a href="../components/TravelMapComponent.html"  data-type="entity-link" class="active" >TravelMapComponent</a>
                                 </li>
                         </ul>
                     </li>
@@ -423,9 +426,6 @@
                                            <a href="../components/ContactFormComponent.html" >ContactFormComponent</a>
                                        </li>
                                        <li class="link">
-                                           <a href="../components/ContactMapComponent.html"  data-type="entity-link" class="active" >ContactMapComponent</a>
-                                       </li>
-                                       <li class="link">
                                            <a href="../components/EducationComponent.html" >EducationComponent</a>
                                        </li>
                                        <li class="link">
@@ -439,6 +439,12 @@
                                        </li>
                                        <li class="link">
                                            <a href="../components/SkillsComponent.html" >SkillsComponent</a>
+                                       </li>
+                                       <li class="link">
+                                           <a href="../components/TravelComponent.html" >TravelComponent</a>
+                                       </li>
+                                       <li class="link">
+                                           <a href="../components/TravelMapComponent.html"  data-type="entity-link" class="active" >TravelMapComponent</a>
                                        </li>
                                </ul>
                            </li>
@@ -653,7 +659,7 @@
 
 <ol class="breadcrumb">
   <li>Components</li>
-  <li>ContactMapComponent</li>
+  <li>TravelMapComponent</li>
 </ol>
 
 <ul class="nav nav-tabs" role="tablist">
@@ -678,7 +684,7 @@
     <h3>File</h3>
 </p>
 <p class="comment">
-    <code>src/contact/components/contact.gmap.ts</code>
+    <code>src/travel/components/travel.gmap.ts</code>
 </p>
 
 
@@ -714,14 +720,14 @@
 
             <tr>
                 <td class="col-md-3">styleUrls</td>
-                <td class="col-md-9"><code>contact.gmap.css</code></td>
+                <td class="col-md-9"><code>travel.gmap.css</code></td>
             </tr>
 
 
 
             <tr>
                 <td class="col-md-3">templateUrl</td>
-                <td class="col-md-9"><code>contact.gmap.htm</code></td>
+                <td class="col-md-9"><code>travel.gmap.htm</code></td>
             </tr>
 
 
@@ -846,7 +852,7 @@
                     </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="44" class="link-to-prism">src/contact/components/contact.gmap.ts:44</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="44" class="link-to-prism">src/travel/components/travel.gmap.ts:44</a></div>
                                 </td>
                             </tr>
     
@@ -885,7 +891,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="104" class="link-to-prism">src/contact/components/contact.gmap.ts:104</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="103" class="link-to-prism">src/travel/components/travel.gmap.ts:103</a></div>
                                 </td>
                             </tr>
     
@@ -958,7 +964,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="66" class="link-to-prism">src/contact/components/contact.gmap.ts:66</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="65" class="link-to-prism">src/travel/components/travel.gmap.ts:65</a></div>
                                 </td>
                             </tr>
     
@@ -995,7 +1001,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="88" class="link-to-prism">src/contact/components/contact.gmap.ts:88</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="87" class="link-to-prism">src/travel/components/travel.gmap.ts:87</a></div>
                                 </td>
                             </tr>
     
@@ -1032,7 +1038,7 @@
     
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="60" class="link-to-prism">src/contact/components/contact.gmap.ts:60</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="60" class="link-to-prism">src/travel/components/travel.gmap.ts:60</a></div>
                                 </td>
                             </tr>
     
@@ -1082,7 +1088,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="30" class="link-to-prism">src/contact/components/contact.gmap.ts:30</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="30" class="link-to-prism">src/travel/components/travel.gmap.ts:30</a></div>
                                 </td>
                             </tr>
     
@@ -1117,7 +1123,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="32" class="link-to-prism">src/contact/components/contact.gmap.ts:32</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="32" class="link-to-prism">src/travel/components/travel.gmap.ts:32</a></div>
                                 </td>
                             </tr>
     
@@ -1152,7 +1158,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="33" class="link-to-prism">src/contact/components/contact.gmap.ts:33</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="33" class="link-to-prism">src/travel/components/travel.gmap.ts:33</a></div>
                                 </td>
                             </tr>
     
@@ -1187,7 +1193,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="34" class="link-to-prism">src/contact/components/contact.gmap.ts:34</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="34" class="link-to-prism">src/travel/components/travel.gmap.ts:34</a></div>
                                 </td>
                             </tr>
     
@@ -1222,7 +1228,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="35" class="link-to-prism">src/contact/components/contact.gmap.ts:35</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="35" class="link-to-prism">src/travel/components/travel.gmap.ts:35</a></div>
                                 </td>
                             </tr>
     
@@ -1257,7 +1263,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="36" class="link-to-prism">src/contact/components/contact.gmap.ts:36</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="36" class="link-to-prism">src/travel/components/travel.gmap.ts:36</a></div>
                                 </td>
                             </tr>
     
@@ -1292,7 +1298,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="31" class="link-to-prism">src/contact/components/contact.gmap.ts:31</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="31" class="link-to-prism">src/travel/components/travel.gmap.ts:31</a></div>
                                 </td>
                             </tr>
     
@@ -1327,7 +1333,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="37" class="link-to-prism">src/contact/components/contact.gmap.ts:37</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="37" class="link-to-prism">src/travel/components/travel.gmap.ts:37</a></div>
                                 </td>
                             </tr>
     
@@ -1362,7 +1368,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="39" class="link-to-prism">src/contact/components/contact.gmap.ts:39</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="39" class="link-to-prism">src/travel/components/travel.gmap.ts:39</a></div>
                                 </td>
                             </tr>
     
@@ -1397,7 +1403,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="38" class="link-to-prism">src/contact/components/contact.gmap.ts:38</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="38" class="link-to-prism">src/travel/components/travel.gmap.ts:38</a></div>
                                 </td>
                             </tr>
     
@@ -1432,7 +1438,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="40" class="link-to-prism">src/contact/components/contact.gmap.ts:40</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="40" class="link-to-prism">src/travel/components/travel.gmap.ts:40</a></div>
                                 </td>
                             </tr>
     
@@ -1467,7 +1473,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="41" class="link-to-prism">src/contact/components/contact.gmap.ts:41</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="41" class="link-to-prism">src/travel/components/travel.gmap.ts:41</a></div>
                                 </td>
                             </tr>
     
@@ -1502,7 +1508,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="42" class="link-to-prism">src/contact/components/contact.gmap.ts:42</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="42" class="link-to-prism">src/travel/components/travel.gmap.ts:42</a></div>
                                 </td>
                             </tr>
     
@@ -1537,7 +1543,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="43" class="link-to-prism">src/contact/components/contact.gmap.ts:43</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="43" class="link-to-prism">src/travel/components/travel.gmap.ts:43</a></div>
                                 </td>
                             </tr>
     
@@ -1572,7 +1578,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="44" class="link-to-prism">src/contact/components/contact.gmap.ts:44</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="44" class="link-to-prism">src/travel/components/travel.gmap.ts:44</a></div>
                                 </td>
                             </tr>
     
@@ -1607,7 +1613,7 @@
                         </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="29" class="link-to-prism">src/contact/components/contact.gmap.ts:29</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="29" class="link-to-prism">src/travel/components/travel.gmap.ts:29</a></div>
                                 </td>
                             </tr>
     
@@ -1644,10 +1650,10 @@ import {elementInViewport} from &#x27;../../shared/common/element.in.viewport&#x
 
 @Component({
   selector: &#x27;googlemap&#x27;,
-  styleUrls: [&#x27;./contact.gmap.css&#x27;],
-  templateUrl: &#x27;contact.gmap.htm&#x27;,
+  styleUrls: [&#x27;./travel.gmap.css&#x27;],
+  templateUrl: &#x27;travel.gmap.htm&#x27;,
 })
-export class ContactMapComponent implements OnInit {
+export class TravelMapComponent implements OnInit {
   public map: Map;
   private _additionalMarkerWait: number;
   private _markerDropWait: number;
@@ -1682,7 +1688,6 @@ export class ContactMapComponent implements OnInit {
   ngOnInit() {
     this.initializeMap();
     this.initScrollListener();
-    this._markerUtil.initClickListener(this.map, this._cityMarkers);
   }
 
   initializeMap() {
@@ -1792,9 +1797,9 @@ export class ContactMapComponent implements OnInit {
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
         var COMPONENT_TEMPLATE = '<div><div class="row map-area">  <div id="map-canvas"></div></div></div>'
-    var COMPONENTS = [{'name': 'AboutComponent', 'selector': 'about'},{'name': 'AppComponent', 'selector': 'container'},{'name': 'ContactComponent', 'selector': 'contact'},{'name': 'ContactFormComponent', 'selector': 'contact-form'},{'name': 'ContactMapComponent', 'selector': 'googlemap'},{'name': 'EducationComponent', 'selector': 'education'},{'name': 'ExperienceComponent', 'selector': 'experience'},{'name': 'FooterComponent', 'selector': 'footer'},{'name': 'HeaderComponent', 'selector': 'header'},{'name': 'SkillsComponent', 'selector': 'skills'}];
+    var COMPONENTS = [{'name': 'AboutComponent', 'selector': 'about'},{'name': 'AppComponent', 'selector': 'container'},{'name': 'ContactComponent', 'selector': 'contact'},{'name': 'ContactFormComponent', 'selector': 'contact-form'},{'name': 'EducationComponent', 'selector': 'education'},{'name': 'ExperienceComponent', 'selector': 'experience'},{'name': 'FooterComponent', 'selector': 'footer'},{'name': 'HeaderComponent', 'selector': 'header'},{'name': 'SkillsComponent', 'selector': 'skills'},{'name': 'TravelComponent', 'selector': 'travel'},{'name': 'TravelMapComponent', 'selector': 'googlemap'}];
     var DIRECTIVES = [];
-    var ACTUAL_COMPONENT = {'name': 'ContactMapComponent'};
+    var ACTUAL_COMPONENT = {'name': 'TravelMapComponent'};
 </script>
 <script src="../js/tree.js"></script>
 
