--- a/app/docs/components/ContactFormComponent.html
+++ b/app/docs/components/ContactFormComponent.html
@@ -108,9 +108,6 @@
                                     <a href="../components/ContactFormComponent.html"  data-type="entity-link" class="active" >ContactFormComponent</a>
                                 </li>
                                 <li class="link">
-                                    <a href="../components/ContactMapComponent.html" >ContactMapComponent</a>
-                                </li>
-                                <li class="link">
                                     <a href="../components/EducationComponent.html" >EducationComponent</a>
                                 </li>
                                 <li class="link">
@@ -124,6 +121,12 @@
                                 </li>
                                 <li class="link">
                                     <a href="../components/SkillsComponent.html" >SkillsComponent</a>
+                                </li>
+                                <li class="link">
+                                    <a href="../components/TravelComponent.html" >TravelComponent</a>
+                                </li>
+                                <li class="link">
+                                    <a href="../components/TravelMapComponent.html" >TravelMapComponent</a>
                                 </li>
                         </ul>
                     </li>
@@ -423,9 +426,6 @@
                                            <a href="../components/ContactFormComponent.html"  data-type="entity-link" class="active" >ContactFormComponent</a>
                                        </li>
                                        <li class="link">
-                                           <a href="../components/ContactMapComponent.html" >ContactMapComponent</a>
-                                       </li>
-                                       <li class="link">
                                            <a href="../components/EducationComponent.html" >EducationComponent</a>
                                        </li>
                                        <li class="link">
@@ -439,6 +439,12 @@
                                        </li>
                                        <li class="link">
                                            <a href="../components/SkillsComponent.html" >SkillsComponent</a>
+                                       </li>
+                                       <li class="link">
+                                           <a href="../components/TravelComponent.html" >TravelComponent</a>
+                                       </li>
+                                       <li class="link">
+                                           <a href="../components/TravelMapComponent.html" >TravelMapComponent</a>
                                        </li>
                                </ul>
                            </li>
@@ -1939,7 +1945,7 @@ export class ContactFormComponent implements OnInit {
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
         var COMPONENT_TEMPLATE = '<div><!--contact form start--><div class="col-xs-12 col-sm-9 col-md-8 col-lg-8 contact-form">  <h4>Send a message</h4>  <div *ngIf="sentSuccessfully" class="success-message">    <h3>Email Sent Successfully.</h3>    <p>Thank you <strong>{{name.value | trim}}</strong>, your message has been sent.</p>  </div>  <form *ngIf="!sentSuccessfully" (ngSubmit)="onSubmit()" [formGroup]="form">    <div id="result">      <div *ngIf="errorMessages" [hidden]="!submitClicked || sentSuccessfully" class="error-message">        <span [hidden]="name.valid">{{errorFromCode(\'e_name_required\')}}<br></span>        <span [hidden]="email.valid">{{errorFromCode(\'e_email_required\')}}<br></span>        <span [hidden]="message.valid">{{errorFromCode(\'e_message_required\')}}</span>        <span *ngIf="serverErrors" class="error-message" [innerHtml]="serverErrors"></span>      </div>    </div>    <input formControlName="name" aria-label="Your name" required type="text" class="col-xs-12 col-sm-6 col-md-6 col-lg-6" placeholder="Your name...">    <input formControlName="email" aria-label="Your email" autocapitalize="off" required type="email" class="col-xs-12 col-sm-6 col-md-6 col-lg-6 no-margin" placeholder="Your email...">    <textarea formControlName="message" aria-label="Your message" required cols="1" rows="1" class="col-xs-12 col-sm-12 col-md-12 col-lg-12" placeholder="Your message..."></textarea>    <input formControlName="heuning" type="hidden">    <img *ngIf="submitting" src="assets/images/loading.gif" class="contact-loader" />    <input [disabled]="(!form.valid && submitClicked) || submitting" (click)="onClick()" type="submit" name="send" class="btn-submit" value="{{submitBtnText}}">  </form></div><!--contact form end--></div>'
-    var COMPONENTS = [{'name': 'AboutComponent', 'selector': 'about'},{'name': 'AppComponent', 'selector': 'container'},{'name': 'ContactComponent', 'selector': 'contact'},{'name': 'ContactFormComponent', 'selector': 'contact-form'},{'name': 'ContactMapComponent', 'selector': 'googlemap'},{'name': 'EducationComponent', 'selector': 'education'},{'name': 'ExperienceComponent', 'selector': 'experience'},{'name': 'FooterComponent', 'selector': 'footer'},{'name': 'HeaderComponent', 'selector': 'header'},{'name': 'SkillsComponent', 'selector': 'skills'}];
+    var COMPONENTS = [{'name': 'AboutComponent', 'selector': 'about'},{'name': 'AppComponent', 'selector': 'container'},{'name': 'ContactComponent', 'selector': 'contact'},{'name': 'ContactFormComponent', 'selector': 'contact-form'},{'name': 'EducationComponent', 'selector': 'education'},{'name': 'ExperienceComponent', 'selector': 'experience'},{'name': 'FooterComponent', 'selector': 'footer'},{'name': 'HeaderComponent', 'selector': 'header'},{'name': 'SkillsComponent', 'selector': 'skills'},{'name': 'TravelComponent', 'selector': 'travel'},{'name': 'TravelMapComponent', 'selector': 'googlemap'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'ContactFormComponent'};
 </script>
