--- a/app/docs/components/SkillsComponent.html
+++ b/app/docs/components/SkillsComponent.html
@@ -108,9 +108,6 @@
                                     <a href="../components/ContactFormComponent.html" >ContactFormComponent</a>
                                 </li>
                                 <li class="link">
-                                    <a href="../components/ContactMapComponent.html" >ContactMapComponent</a>
-                                </li>
-                                <li class="link">
                                     <a href="../components/EducationComponent.html" >EducationComponent</a>
                                 </li>
                                 <li class="link">
@@ -124,6 +121,12 @@
                                 </li>
                                 <li class="link">
                                     <a href="../components/SkillsComponent.html"  data-type="entity-link" class="active" >SkillsComponent</a>
+                                </li>
+                                <li class="link">
+                                    <a href="../components/TravelComponent.html" >TravelComponent</a>
+                                </li>
+                                <li class="link">
+                                    <a href="../components/TravelMapComponent.html" >TravelMapComponent</a>
                                 </li>
                         </ul>
                     </li>
@@ -423,9 +426,6 @@
                                            <a href="../components/ContactFormComponent.html" >ContactFormComponent</a>
                                        </li>
                                        <li class="link">
-                                           <a href="../components/ContactMapComponent.html" >ContactMapComponent</a>
-                                       </li>
-                                       <li class="link">
                                            <a href="../components/EducationComponent.html" >EducationComponent</a>
                                        </li>
                                        <li class="link">
@@ -439,6 +439,12 @@
                                        </li>
                                        <li class="link">
                                            <a href="../components/SkillsComponent.html"  data-type="entity-link" class="active" >SkillsComponent</a>
+                                       </li>
+                                       <li class="link">
+                                           <a href="../components/TravelComponent.html" >TravelComponent</a>
+                                       </li>
+                                       <li class="link">
+                                           <a href="../components/TravelMapComponent.html" >TravelMapComponent</a>
                                        </li>
                                </ul>
                            </li>
@@ -1200,7 +1206,7 @@ export class SkillsComponent implements OnInit {
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
         var COMPONENT_TEMPLATE = '<div><!--technical start--><section class="skills" id="skills">  <div class="container">    <div class="heading">      <h2>Technical Skills</h2>      <p>my level of confidence</p>    </div>    <div class="row">      <div *ngFor="let skill of skills" class="col-xs-12 col-sm-4 col-md-4 col-lg-4 skill-area">        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 skill">          <span class="chart skill-background" [attr.data-percent]="skill.level">            <span class="percent"></span>          </span>          <h4 class="js_trigger_skills">{{skill.name}}</h4>          <p>{{skill.content}}</p>        </div>      </div>    </div>  </div></section><!--technical end--></div>'
-    var COMPONENTS = [{'name': 'AboutComponent', 'selector': 'about'},{'name': 'AppComponent', 'selector': 'container'},{'name': 'ContactComponent', 'selector': 'contact'},{'name': 'ContactFormComponent', 'selector': 'contact-form'},{'name': 'ContactMapComponent', 'selector': 'googlemap'},{'name': 'EducationComponent', 'selector': 'education'},{'name': 'ExperienceComponent', 'selector': 'experience'},{'name': 'FooterComponent', 'selector': 'footer'},{'name': 'HeaderComponent', 'selector': 'header'},{'name': 'SkillsComponent', 'selector': 'skills'}];
+    var COMPONENTS = [{'name': 'AboutComponent', 'selector': 'about'},{'name': 'AppComponent', 'selector': 'container'},{'name': 'ContactComponent', 'selector': 'contact'},{'name': 'ContactFormComponent', 'selector': 'contact-form'},{'name': 'EducationComponent', 'selector': 'education'},{'name': 'ExperienceComponent', 'selector': 'experience'},{'name': 'FooterComponent', 'selector': 'footer'},{'name': 'HeaderComponent', 'selector': 'header'},{'name': 'SkillsComponent', 'selector': 'skills'},{'name': 'TravelComponent', 'selector': 'travel'},{'name': 'TravelMapComponent', 'selector': 'googlemap'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'SkillsComponent'};
 </script>
