--- a/src/travel/components/travel.gmap.scss
+++ b/src/travel/components/travel.gmap.scss
@@ -7,21 +7,17 @@
 .map-area {
   @include bg-image($image: 'map-bro.png', $repeat: repeat-x);
   padding-top: 4px;
-  height: 500px;
+  height: 65vh;
   overflow: hidden;
   width: 100%;
   margin: 0;
 
-  @include respond-to($query: $screen-lg-min) {
-    height: 450px;
-  }
-
   @include respond-to($query: $screen-x2-min) {
-    height: 360px;
+    height: 50vh;
   }
 
   @include respond-to($query: $screen-x4-min) {
-    height: 280px;
+    height: 45vh;
   }
 }
 
