--- a/src/travel/components/travel.htm
+++ b/src/travel/components/travel.htm
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="heading">
       <h2 class="js_trigger_map_marker">Places I've been</h2>
-      <blockquote>"you have brains in your head. you have feet in your shoes.<br>you can steer yourself any direction you choose." - dr. seuss</blockquote>
+      <blockquote>"you have brains in your head. you have feet in your shoes. you can steer yourself any direction you choose." - dr. seuss</blockquote>
     </div>
   </div>
   <googlemap></googlemap>
